[tool.poetry]
name = "uniswap-python"
version = "0.5.4"
description = "An unofficial Python wrapper for the Uniswap exchange"
repository = "https://github.com/shanefontaine/uniswap-python"
readme = "README.md"
keywords = ["uniswap", "ethereum", "exchange", "trading"]
authors = ["Shane Fontaine <shane6fontaine@gmail.com>", "Erik Bjäreholt <erik@bjareho.lt>"]
license = "MIT"
packages = [
    { include = "uniswap" },
]
include = ["uniswap/assets/*.abi", "uniswap/assets/*/*.abi"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.scripts]
unipy = "uniswap:main"

[tool.poetry.dependencies]
python = "^3.7.2"
web3 = "^5.23.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
pytest = "^6.0"
pytest-cov = "*"
pytest-dotenv = "*"
python-dotenv = "*"
flake8 = "*"
Sphinx = "*"
sphinx-book-theme = "*"
sphinx-click = "*"

[tool.pytest.ini_options]
log_cli = false  # to print logs during tests, set to true
#log_level = "NOTSET"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
